--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,16 @@
       <div id="sidebar-hide" onclick="toggleSidebar()"></div>
       <div class="sel-res-img-placeholder">
         <img id="sel-res-img" src="" onerror="imgError(this)">
+        <div id="img-rating"></div>
       </div>
-      <h1 id="title">Title</h1>
-      Average priec for two: <h4 id="price"></h4>
+      <div class="sidebar-description">
+        <h1 id="title"></h1>
+        <p>Average price for two: <span id="price"></span></p>
+        <p>Cuisines: <span id="cuisines"></span></p>
+        <p>Has online delivery: <span id="online-delivey"></span></p>
+        <p>Delivery Open Now: <span id="delivery-now"></span></p>
+        <h2>Reviews</h2>
+      </div>
     </div>
     <div id="map"></div>
 
