--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,22 @@
   </head>
   <body>
     <input id="location-input" type="text" placeholder="Enter a location">
-    <div id="sidebar">
+    <div id="sidebar" class="layout vertical">
       <div id="sidebar-hide" onclick="toggleSidebar()"></div>
       <div class="sel-res-img-placeholder">
         <img id="sel-res-img" src="" onerror="imgError(this)">
         <div id="img-rating"></div>
       </div>
-      <div class="sidebar-description">
-        <h1 id="title"></h1>
+      <div class="sidebar-description flex">
+        <h2 id="title"></h2>
         <p>Average price for two: <span id="price"></span></p>
         <p>Cuisines: <span id="cuisines"></span></p>
         <p>Has online delivery: <span id="online-delivey"></span></p>
         <p>Delivery Open Now: <span id="delivery-now"></span></p>
         <h2>Reviews</h2>
+        <img src="img/loader.gif" id="loader">
+        <div id="reviews-placeholder">
+        </div>
       </div>
     </div>
     <div id="map"></div>
