auto detects the location of the user

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="map"></div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv6RT_5HaCvU4SsOzaQXaQnv1xjHhONkg&libraries=places&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv6RT_5HaCvU4SsOzaQXaQnv1xjHhONkg&libraries=places&callback=init"
       async defer></script>
   </body>
 </html>
