makes hide-sidebar unselectable and updates the cursor properly

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <input id="location-input" type="text" placeholder="Enter a location">
     <div id="sidebar" class="layout vertical">
-      <div id="sidebar-hide" onclick="toggleSidebar()"></div>
+      <div id="sidebar-hide" class="noselect" onclick="toggleSidebar()"></div>
       <div class="sel-res-img-placeholder">
         <img id="sel-res-img" src="" onerror="imgError(this)">
         <div id="img-rating"></div>
