adds booking url

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       </div>
       <div class="sidebar-description flex">
         <h2 id="title"></h2>
+        <button disabled id="book-button">Book a Table</button>
         <p>Average price for two: <span id="price"></span></p>
         <p>Cuisines: <span id="cuisines"></span></p>
         <p>Has online delivery: <span id="online-delivey"></span></p>
